cabal-version:      2.4
name:               orgself
version:            0.1.0.0
license:            AGPL-3.0-only
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

executable orgself
  build-depends:
    , async
    , base                    ^>=4.14.1.0
    , blaze-html
    , blaze-markup
    , constraints-extras
    , containers
    , data-default
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , directory
    , ema
    , filepath
    , filepattern
    , lvar
    , megaparsec
    , monad-logger
    , neat-interpolation
    , org-mode
    , parser-combinators
    , relude
    , safe-exceptions
    , shower
    , some
    , tagged
    , text
    , time
    , unliftio

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  other-modules:
    Data.Time.Extra
    OrgSelf.Data
    OrgSelf.Data.Measure
    OrgSelf.Data.Tag
    OrgSelf.Data.Task
    OrgSelf.Route
    OrgSelf.Widget.Icons

  default-language:   Haskell2010
